[gd_scene load_steps=4 format=3 uid="uid://b5s8w3x1r8m2k"]

[ext_resource type="Script" uid="uid://dskepgax0rg1w" path="res://Screens/CreateCharacterScreen.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://c5qare21gyn61" path="res://Assets/bg.png" id="2_bg"]
[ext_resource type="FontFile" uid="uid://b4wlpcoccn8e7" path="res://Assets/TRON.TTF" id="3_font"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.145098, 0.145098, 1)

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -389.5
offset_top = 80.0
offset_right = 389.5
offset_bottom = 160.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 50
text = "NEUER CHARAKTER"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Name des Charakters:"

[node name="CharName" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name eingeben..."
alignment = 1

[node name="ClassLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Klasse w√§hlen:"

[node name="ClassOption" type="OptionButton" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
selected = 2
item_count = 5
popup/item_0/text = "Barbarian"
popup/item_0/id = 0
popup/item_1/text = "Knight"
popup/item_1/id = 1
popup/item_2/text = "Mage"
popup/item_2/id = 2
popup/item_3/text = "Ranger"
popup/item_3/id = 3
popup/item_4/text = "Rogue"
popup/item_4/id = 4

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CreateButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Charakter Erstellen"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Abbrechen"

[node name="ErrorLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1
autowrap_mode = 3
